--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
     <header class="mobile-header">
         <div class="mobile-title">
             <i class="fas fa-camera"></i>
-            <span>Олег<span class="oleg">.Галерея</span></span>
+            <span>ОЛЕЖА<span class="oleg">.HUB</span></span>
         </div>
         <div class="mobile-actions">
             <button class="mobile-btn" id="search-toggle" title="Поиск">
@@ -1262,3 +1262,4 @@
 </body>
 
 </html>
+
