--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     <!-- Hero секция -->
     <section class="hero-section">
         <div class="hero-content">
-            <h1 class="hero-title">Угарные фото Олега</h1>
+            <h1 class="hero-title">Угарные мувы гагауза</h1>
             <p class="hero-subtitle">Эксклюзивная коллекция из 100 самых угарных и легендарных фотографий</p>
             <div class="counter-badge">
                 <i class="fas fa-images"></i>
@@ -1262,4 +1262,5 @@
 </body>
 
 </html>
+
 
